Home Page Designed

--- a/index.html
+++ b/index.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/style.css">
+
+    <title>Home Screen</title>
 </head>
 <body>
-    <h1>Nigga gang Nigga gang gang gang </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores error voluptates dolor dolorum! Odit, praesentium nobis quae eos, minus doloremque laborum pariatur consectetur suscipit ducimus, itaque obcaecati et iure est commodi facere architecto officia possimus quia alias consequuntur maiores tempora repellendus! Distinctio possimus eaque tenetur delectus. Veritatis sapiente harum mollitia recusandae blanditiis sit perspiciatis doloremque sint quidem ipsa neque corporis suscipit officiis culpa excepturi autem ratione tempore reiciendis, quia earum velit unde! Optio dolores libero ad eligendi atque hic, voluptatibus facere? Qui veniam ut inventore natus delectus. Ducimus sunt sed culpa doloribus animi ipsam recusandae est similique, eveniet laborum quia? Sit, quisquam distinctio perferendis quo blanditiis et at animi fuga, molestias minima assumenda soluta modi repellendus praesentium accusamus tenetur quam error ea? Sint, eius. Architecto molestiae, sint sunt dolores quod modi maxime recusandae, rem eius assumenda, nemo dolorum sit nesciunt a in laboriosam exercitationem nam. Deserunt facere autem obcaecati rerum corporis suscipit, recusandae, fugiat qui esse architecto enim totam unde nam vero amet accusamus? Ut officia minima quibusdam commodi! Nihil eligendi eos sint animi laboriosam vero magnam aperiam sunt non accusamus eveniet voluptate illo quae commodi eius architecto quo explicabo expedita saepe ab dolore, iste ipsum reprehenderit numquam. Sapiente quae illo aperiam atque esse? Minus reiciendis labore corrupti nam impedit sunt obcaecati magnam ipsum quos quam fugiat sequi ad quae, atque ratione nisi sit ipsa ab. Dolorum odio ipsa, eum, possimus in illum, laborum odit natus consequatur ullam numquam beatae sed. Exercitationem, animi ipsa? Ducimus debitis nisi tempore dolores libero assumenda quidem molestias excepturi praesentium cumque enim sapiente maiores officia nam ullam minus non voluptatibus, nobis consectetur sit voluptatum fuga. Eius reiciendis necessitatibus ducimus fugiat, quos iure quam impedit maxime temporibus amet placeat, harum numquam voluptatibus velit voluptas et consequuntur aut. Ipsum earum quam ex deserunt, reprehenderit neque ad nesciunt a sapiente omnis ratione voluptatibus repellendus dolores officia nam quia rerum commodi modi corporis harum quisquam! Quas repudiandae tenetur, sapiente voluptatem temporibus, repellendus quae officiis dicta eaque eos doloremque ipsum dolore dolorum fuga omnis excepturi totam amet maiores? Nemo quos voluptas animi maiores consequatur eveniet. Harum, aliquam? Adipisci omnis iste, dolorum ipsum corporis, eaque quaerat deleniti vitae placeat minima culpa eos dicta excepturi necessitatibus quas deserunt, quasi accusamus rerum similique perspiciatis facilis officia. Quod iure perferendis labore sit fugit veniam, adipisci exercitationem quo voluptate recusandae iste nesciunt dolorum ad consequuntur reiciendis nemo doloribus tenetur optio vitae voluptates minus. Unde ipsa excepturi, architecto nesciunt nisi ab dolores voluptatibus obcaecati ut porro tempore rem debitis possimus beatae accusantium, itaque necessitatibus corporis incidunt.</p>
+
+        <nav class="nav-bar">
+            <div class="flex-container">
+                <i class="fas fa-bars fa-lg"></i>
+                <a class="navbar-brand" href="#">VOICE ASSISTANT</a>
+                
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Out</button>
+            </div>
+        </nav>
+ 
+     <!-- <div class="container">
+         <div class="grid-container">
+             <div class="grid-item" id="g1"><a href="#" class="icon-link"><i class="fas fa-phone-alt fa-2x"></i></a></div>
+             <div class="grid-item" id="g2"><a href="#" class="icon-link"> <i class="far fa-comment-alt fa-2x"></i></a></div>
+             <div class="grid-item" id="g3"><a href="#" class="icon-link"><i class="fas fa-search fa-2x"></i></a></div>
+             <div class="grid-item" id="g"></div>
+             <div class="grid-item" id="g4"><a href="#"><i class="fas fa-microphone fa-2x"></i></a></div>
+             <div class="grid-item" id="g"></div>
+             <div class="grid-item" id="g5"><a href="#" class="icon-link"><i class="fas fa-battery-three-quarters fa-2x"></i></a></div>
+             <div class="grid-item" id="g6"><a href="#" class="icon-link"><i class="fas fa-map-marker-alt fa-2x"></i></a></div>
+             <div class="grid-item" id="g7"><a href="#" class="icon-link"><i class="far fa-clipboard fa-2x"></i></a></div>
+         </div>
+     </div> -->
+
+
+     <div class="container" style="margin-top: 2rem;">
+        <div class="row">
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  PHONE  -->
+                <div class="grid-item" id="g1"><a href="#" class="icon-link"><i class="fas fa-phone-alt fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  MESSAGE  -->
+                <div class="grid-item" id="g2"><a href="#" class="icon-link"> <i class="far fa-comment-alt fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  SEARCH BROWSER  -->
+                <div class="grid-item" id="g3"><a href="#" class="icon-link"><i class="fas fa-search fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">
+                <div class="grid-item" id="g"></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  MICROPHONE  -->
+                <div class="grid-item" id="g4"><a href="#" class="icon-link"><i class="fas fa-microphone fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">
+                <div class="grid-item" id="g"></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  BATTERY  -->
+                <div class="grid-item" id="g5"><a href="#" class="icon-link"><i class="fas fa-battery-three-quarters fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  NAVIGATION  -->
+                <div class="grid-item" id="g6"><a href="#" class="icon-link"><i class="fas fa-map-marker-alt fa-2x"></i></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-4 boxy">    <!--  NOTES  -->
+                <div class="grid-item" id="g7"><a href="#" class=" thumbnail icon-link"><i class="far fa-clipboard fa-2x"></i></a></div>
+            </div>
+            
+        </div>
+    </div>
+   
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
 </html>
