--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
 
      <div class="container" style="margin-top: 2rem;">
         <div class="row">
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  PHONE  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  PHONE  -->
                 <div class="grid-item" id="g1"><a href="#" class="icon-link"><i class="fas fa-phone-alt fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  MESSAGE  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  MESSAGE  -->
                 <div class="grid-item" id="g2"><a href="#" class="icon-link"> <i class="far fa-comment-alt fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  SEARCH BROWSER  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  SEARCH BROWSER  -->
                 <div class="grid-item" id="g3"><a href="#" class="icon-link"><i class="fas fa-search fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">
+            <div class="col-lg-4 col-sm-4 col-xs-4">
                 <div class="grid-item" id="g"></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  MICROPHONE  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  MICROPHONE  -->
                 <div class="grid-item" id="g4"><a href="#" class="icon-link"><i class="fas fa-microphone fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">
+            <div class="col-lg-4 col-sm-4 col-xs-4">
                 <div class="grid-item" id="g"></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  BATTERY  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  BATTERY  -->
                 <div class="grid-item" id="g5"><a href="#" class="icon-link"><i class="fas fa-battery-three-quarters fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  NAVIGATION  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  NAVIGATION  -->
                 <div class="grid-item" id="g6"><a href="#" class="icon-link"><i class="fas fa-map-marker-alt fa-2x"></i></a></div>
             </div>
-            <div class="col-lg-4 col-sm-4 boxy">    <!--  NOTES  -->
+            <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  NOTES  -->
                 <div class="grid-item" id="g7"><a href="#" class=" thumbnail icon-link"><i class="far fa-clipboard fa-2x"></i></a></div>
             </div>
             
