Added Speech Recognition in Home Screen

--- a/homeScreen.html
+++ b/homeScreen.html
@@ -19,7 +19,7 @@
             <div class="flex-container">
                 <i class="fas fa-bars fa-lg"></i>
 
-                <a class="navbar-brand" href="#" onmouseover="PlaySound('soundSus')" onmouseout="StopSound('soundSus')">VOICE ASSISTANT</a>
+                <a class="navbar-brand" href="#" >VOICE ASSISTANT</a> <!-- onmouseover="PlaySound('soundSus')" onmouseout="StopSound('soundSus')" -->
 
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onmouseover="PlaySound('soundSout')" onmouseout="StopSound('soundSout')">Sign Out</button>
             </div>
@@ -29,7 +29,7 @@
      <div class="container" style="margin-top: 2rem;">
         <div class="row">
             <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  PHONE  -->
-                <div class="grid-item" id="g1">
+                <div class="grid-item Phone" id="g1">
                     <a href="#" class="icon-link"  onmouseover="PlaySound('soundPhn')" onmouseout="StopSound('soundPhn')">
                         <i class="fas fa-phone-alt fa-2x"></i>
                     </a>
@@ -39,7 +39,7 @@
 
 
             <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  MESSAGE  -->
-                <div class="grid-item" id="g2">
+                <div class="grid-item Message" id="g2">
                     <a href="#" class="icon-link"  onmouseover="PlaySound('soundMsg')" onmouseout="StopSound('soundMsg')">
                         <i class="far fa-comment-alt fa-2x"></i>
                     </a>
@@ -95,7 +95,7 @@
 
             <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  MICROPHONE  -->
                 <div class="grid-item" id="g4">
-                    <a href="#" class="icon-link" onmouseover="PlaySound('soundMic')" onmouseout="StopSound('soundMic')">
+                    <a href="#" class="icon-link mic" onmouseover="PlaySound('soundMic')" onmouseout="StopSound('soundMic')">
                         <i class="fas fa-microphone fa-2x"></i>
                     </a>
                 </div>
@@ -109,7 +109,7 @@
     </div>
 
 
-    <audio src="Audio/sus.mp3" id="soundSus" preload="auto"></audio>
+    <!-- <audio src="Audio/sus.mp3" id="soundSus" preload="auto"></audio> -->
     <audio src="Audio/Sign-Out.mp3" id="soundSout" preload="auto"></audio>
     <audio src="Audio/contacts_en_us_1.mp3" id="soundPhn" preload="auto"></audio>
     <audio src="Audio/messages_en_us_1.mp3" id="soundMsg" preload="auto"></audio>
@@ -118,8 +118,10 @@
     <audio src="Audio/navigation_en_us_1.mp3" id="soundNavg" preload="auto"></audio>
     <audio src="Audio/notes_en_us_1.mp3" id="soundNote" preload="auto"></audio>
     <audio src="Audio/microphone_en_us_1.mp3" id="soundMic" preload="auto"></audio>
+    <audio src="Audio/listening_en_us_1.mp3" id="soundList" preload="auto"></audio>
    
     <script src="sounds.js"></script>
+    <script src="Speech.js"></script>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
