--- a/homeScreen.html
+++ b/homeScreen.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
@@ -95,9 +95,9 @@
 
             <div class="col-lg-4 col-sm-4 col-xs-4">    <!--  MICROPHONE  -->
                 <div class="grid-item" id="g4">
-                    <a href="#" class="icon-link mic" onmouseover="PlaySound('soundMic')" onmouseout="StopSound('soundMic')">
-                        <i class="fas fa-microphone fa-2x"></i>
-                    </a>
+                    <a href="#" class="icon-link mic" onmouseover="PlaySound('soundMic')" onmouseout="StopSound('soundMic')" />
+                    <i class="fas fa-microphone fa-2x" ></i>
+                </a>
                 </div>
             </div>
 
