--- a/homeScreen.html
+++ b/homeScreen.html
@@ -9,7 +9,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
     <title>Home Screen</title>
 </head>
@@ -120,8 +120,8 @@
     <audio src="Audio/microphone_en_us_1.mp3" id="soundMic" preload="auto"></audio>
     <audio src="Audio/listening_en_us_1.mp3" id="soundList" preload="auto"></audio>
    
-    <script src="/JS/sounds.js"></script>
-    <script src="/JS/Speech.js"></script>
+    <script src="JS/sounds.js"></script>
+    <script src="JS/Speech.js"></script>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
