--- a/navigation.html
+++ b/navigation.html
@@ -5,7 +5,7 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 
         <style type='text/css'>body{margin:0;padding:0;overflow:hidden;font-family:'Segoe UI',Helvetica,Arial,Sans-Serif}</style>
-        <link rel="stylesheet" href="/CSS/navig.css">
+        <link rel="stylesheet" href="CSS/navig.css">
 
         <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
         <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=ArGTEcSiJxp1smA3VXDt8JdwWGaLMB1ouuYH32meyDalTuXWPD8fegH3QvZreqiZ&callback=loadMapScenario' async defer></script>
@@ -45,9 +45,9 @@
         <audio src="Audio/microphone_en_us_1.mp3" id="soundMic" preload="auto"></audio>
         <audio src="Audio/listening_en_us_1.mp3" id="soundList" preload="auto"></audio>
 
-        <script type="text/javascript" src="/JS/Maps.js"></script>
+        <script type="text/javascript" src="JS/Maps.js"></script>
         <!-- <script src="Speech.js"></script> -->
-        <script src="/JS/sounds.js"></script>
+        <script src="JS/sounds.js"></script>
         <script src="https://code.responsivevoice.org/responsivevoice.js?key=TG5b3JGw"></script>
     </body>
 </html>
