--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="/CSS/signIn.css">
+    <link rel="stylesheet" href="CSS/signIn.css">
     <title>Login</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
     <audio src="Audio/password_en_us_1.mp3" id="soundPwd" preload="auto"></audio>
     <audio src="Audio/submit_en_us_1.mp3" id="soundSub" preload="auto"></audio>
     
-    <script src="/JS/signIn.js"></script>
-    <script src="/JS/sounds.js"></script>
+    <script src="JS/signIn.js"></script>
+    <script src="JS/sounds.js"></script>
 </body>
 </html>
