--- a/navigation.html
+++ b/navigation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>searchbyaddressHTML</title>
+        <title>Navigation</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 
-        <style type='text/css'>body{margin:0;padding:0;overflow:hidden;font-family:'Segoe UI',Helvetica,Arial,Sans-Serif}</style>
+        <style type='text/css'></style>
         <link rel="stylesheet" href="CSS/navig.css">
 
         <script src="https://kit.fontawesome.com/70795afb75.js" crossorigin="anonymous"></script>
@@ -46,7 +46,6 @@
         <audio src="Audio/listening_en_us_1.mp3" id="soundList" preload="auto"></audio>
 
         <script type="text/javascript" src="JS/Maps.js"></script>
-        <!-- <script src="Speech.js"></script> -->
         <script src="JS/sounds.js"></script>
         <script src="https://code.responsivevoice.org/responsivevoice.js?key=TG5b3JGw"></script>
     </body>
